# test_onvif_ver2

./: Makefile  main.cpp  sync.txt
include/httplib/: CMakeLists.txt
include/onvifApi/: CMakeLists.txt  onvifApi.cpp  onvifApi.h  onvifCustomStruct.h
include/xml/: CMakeLists.txt
libOnvif/: AdvancedSecurityServiceBinding.nsmap  soapAdvancedSecurityServiceBindingProxy.cpp  soapAdvancedSecurityServiceBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapMedia2BindingProxy.cpp  soapMedia2BindingProxy.h  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  soapwsddProxy.cpp  soapwsddProxy.h  wsdd.nsmap  wsddC.cpp  wsddClient.cpp  wsddH.h  wsddServer.cpp  wsddStub.h
